/*
 * test_records_import.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2018 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record.import;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "TestRecordsImportProto";

import "record_metadata_options.proto";
import "test_records_1.proto";
import "test_records_2.proto";

message RecordTypeUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  optional com.apple.foundationdb.record.test1.MySimpleRecord _MySimpleRecord = 1;
  optional com.apple.foundationdb.record.test2.MyLongRecord _MyLongRecord = 2;
}
